# wx-shop

./: .gitignore  Cargo.toml  README.md  Settings.toml  Settings.toml.example
.sqlx/: query-8390a47d00a3c1845a4d7ebb1919e42f8e27264d08d425e456f067ce49ddeb2d.json
src/: lib.rs  main.rs
src/domain/: users.rs
src/handler/: index.rs  mod.rs  users.rs
src/models/: mod.rs
src/repos/: users.rs
src/router/: error.rs  middleware.rs  mod.rs  protected.rs  public.rs
src/service/: mod.rs  users.rs
