[package]
name = "wx-shop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = {version = "1.48.0", features = ["full"]}
route = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = "0.3.22"

tracing = "0.1.43"

# 确保添加或更新 tower-http
tower-http = { version = "0.6.8", features = ["trace"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "macros"] } # 使用 MySQL
config = "0.15.18"

tracing-appender = "0.2.4"

clap = { version = "4.5.53", features = ["derive"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.9.0"
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
http-body-util = "0.1.3"
user-service = "0.4.1"
